# claude-mailbox

./: .gitignore  README.md  pyproject.toml
.beads/: config.yaml  metadata.json
docs/: DESIGN.md
skills/mailbox/: SKILL.md
skills/mailbox-leader/: SKILL.md
src/claude_mailbox/: bd.py  channel.py  cli.py  identity.py  leader.py  model.py  server.py
tests/: test_channel.py  test_leader.py  test_mcp_e2e.py  test_request_response.py  test_validation.py
