[project]
name = "claude-mailbox"
version = "0.1.0"
description = "MCP mailbox for cross-talk between concurrent Claude Code sessions, backed by beads (bd)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.0"]

[project.scripts]
claude-mailbox = "claude_mailbox.server:main"
mailbox = "claude_mailbox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_mailbox"]

[dependency-groups]
dev = ["black", "pytest"]
